--- a/style.css
+++ b/style.css
@@ -1,13 +1,51 @@
 body{
-    background-color: black;
-}
-.container{
-   background-color: black; 
-    display: grid, inline-grid;
+    background-color: rgb(0, 0, 0);
 }
 
-.header{
-    font-size: 50pt;
-    text-align: center;
-    color: #FACD35;
+.homeareas{
+    display: grid;
+    grid-template-columns: 25% 25% 25% 25%;
+    grid-template-rows: 25% 25% 25% 25%;
+    grid-template-areas: 
+        "nav nav nav imglogo"
+        "imgbee imgbee imgbee imgbee"
+        "imgbee imgbee imgbee imgbee"
+        "bradley bradley title title";  
+    width: 100%;
+    height: 100vh;
+    margin: auto;  
+
 }
+  .nav{
+    grid-area: nav; 
+   
+  }
+  .nav ul li{
+   
+    list-style: none;
+      position: inherit;
+      left: 21px;
+      top: 14px;
+      font-family: Playfair Display;
+      font-style: normal;
+      font-weight: normal;
+      font-size: 36px;
+      line-height: 42px;
+      letter-spacing: 0.115em;
+      color: #FACD35;
+  }
+  .nav a{
+    text-decoration: none;
+  }
+  .imglogo{
+      grid-area: imglogo;
+      
+      /* height: 100%; */
+      width: 100%;
+  }
+
+ .imgbee{
+    grid-area: imgbee; 
+     width: 1000pt;
+     height: 100pt;
+ }
