--- a/style.css
+++ b/style.css
@@ -35,9 +35,7 @@ min-height: 1000px;
     display: grid;
     grid-template-columns: 12;
     grid-auto-rows:minmax(100px,auto);
-    grid-template-areas: 
-        "nav nav . . . . . . imglogo . . ."
-        ". . . . . . . . . . . ."
+    grid-template-areas:
         "imgbee imgbee imgbee imgbee imgbee  imgbee  imgbee  imgbee imgbee imgbee imgbee imgbee"
         ". . . . . . . . . . . ."
         "aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus" 
@@ -48,26 +46,114 @@ min-height: 1000px;
         justify-content: right;
         align-content: right;
 }
-  .nav{
-    grid-area: nav; 
-    height: 100px;
-   
-  }
-  .nav ul li{
-   
-    list-style: none;
-      position: inherit;
-      font-family: Playfair Display;
-      font-style: normal;
-      font-weight: normal;
-      font-size: 150%;
-      line-height: 150%;
-      letter-spacing: 0.115em;
-      color: #FACD35;
-  }
-  .nav a{
-    text-decoration: none;
-  }
+/***************** FONTS ********************/
+
+@import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
+@import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
+html {font-size: 62.5%; font-family: 'Open Sans', sans-serif;}
+body {font-size: 1.6rem; min-height: 100vh;}
+h1 {font-size: 3rem; margin-bottom: 1rem;}
+h2 {font-size: 1.6rem;}
+header {position: relative;}
+main {padding: 2rem;}
+
+/************** NAVIGATION ***************/
+
+nav {
+  position: sticky;
+ 
+}
+nav ul {
+	display: flex; 
+	flex-wrap: wrap; 
+	max-width: 1080px; 
+	margin: 0 auto;		
+   background: rgb(31, 31, 31);
+   list-style: none;
+}
+nav ul,
+nav li {
+	flex: 1;	
+}
+nav li:last-child {
+   border-bottom: none;
+}
+nav a {
+	text-decoration: none;
+	color: inherit;
+	display: block;
+	font-size: 1.8rem;
+}
+nav a:hover {
+	background: #adacac;
+	color:  #FACD35;
+}
+nav li {
+ 
+	line-height: 50px;
+	color:  #FACD35;
+	text-align: center;
+}  
+nav input,
+nav label {
+	display: none;
+	width: 36px; 
+	height: 36px; 
+	background: #555; 
+	color:  #FACD35; 
+	text-align: center; 
+	line-height: 36px;
+	font-size: 1.6rem;
+	border-radius: 2px;
+} 
+nav label {
+   position: absolute; 
+   top: 8px; 
+   right: 8px; 
+   transition: .4s;
+}
+nav label:hover {cursor:pointer;}
+nav label:before {
+	font-family: FontAwesome;
+	font-size: 24px;
+	content: "\f0c9";
+	text-align: center;
+}
+
+/************* MEDIA QUERIES **************/
+
+@media only screen and (max-width: 1080px){
+   nav {
+      position: sticky;
+   }
+	nav ul {
+		transform: translateY(0);
+		box-shadow: 0 0 5px rgba(0,0,0, .7);
+      transition: all .5s;
+      position: absolute;
+      width: 100%;
+	}
+	nav li {
+		flex: none; 
+		width: 100%;
+		border-bottom: solid 1px  #FACD35;
+	} 
+	nav input[type="checkbox"]:checked + ul  {
+		transform: translateY(-100%);
+		width: 100%;
+		background:  #FACD35;   
+      transition: all .5s;
+	}
+	nav label{
+      display: block;
+   }  
+	nav input[type="checkbox"]:checked + ul li:nth-child(1){
+		background: #777; 
+		color: #fff;
+	}  
+}
+  
+
   .imglogo{
       grid-area: imglogo;
       width: 300%;
