--- a/style.css
+++ b/style.css
@@ -1,272 +1,336 @@
 html {
-  scroll-behavior: smooth;
+	scroll-behavior: smooth;
 }
 body {
-  /* background-color: rgb(0, 0, 0); */
-  padding: 0;
-  margin: 0;
-  background-color: rgb(31, 31, 31);
+	/* background-color: rgb(0, 0, 0); */
+	padding: 0;
+	margin: 0;
+	background-color: rgb(31, 31, 31);
 }
 h1 {
-  color: #facd35;
-  text-align: center;
-  font-size: 500%;
-  font-family: "Playfair Display", serif;
+	color: #facd35;
+	text-align: center;
+	font-size: 500%;
+	font-family: "Playfair Display", serif;
 }
 p {
-  color: rgb(255, 196, 0);
-  text-align: center;
-  margin-left: 10%;
-  margin-right: 10%;
-  font-size: 200%;
-  font-family: "Open Sans", sans-serif;
+	color: rgb(255, 196, 0);
+	text-align: center;
+	margin-left: 10%;
+	margin-right: 10%;
+	font-size: 200%;
+	font-family: "Open Sans", sans-serif;
 }
 a {
-  color: #facd35;
-  font-family: "Playfair Display", serif;
+	color: #facd35;
+	font-family: "Playfair Display", serif;
 }
 .wrapper {
-  width: 100%;
-  height: 100%;
-  /* min-width: 1000px; */
-  min-height: 1000px;
+	width: 100%;
+	height: 100%;
+	/* min-width: 1000px; */
+	min-height: 1000px;
 }
 .homeareas {
-  display: grid;
-  grid-template-columns: 12;
-  grid-auto-rows: minmax(100px, auto);
-  grid-template-areas:
-    "imgbee imgbee imgbee imgbee imgbee  imgbee  imgbee  imgbee imgbee imgbee imgbee imgbee"
-    "header header header header header header header header header header header header "
-    "aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus"
-    ". . . . . . . . . . . ."
-    "imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees"
-    ". . . . . . . . . . . ."
-    "products products products products products products products products products products products products";
-  justify-content: right;
-  align-content: right;
+	display: grid;
+	grid-template-columns: 12;
+	grid-auto-rows: minmax(100px, auto);
+	grid-template-areas:
+		"imgbee imgbee imgbee imgbee imgbee  imgbee  imgbee  imgbee imgbee imgbee imgbee imgbee"
+		"header header header header header header header header header header header header "
+		"aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus aboutus"
+		". . . . . . . . . . . ."
+		"imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees imgbees"
+		". . . . . . . . . . . ."
+		"products products products products products products products products products products products products";
+	justify-content: right;
+	align-content: right;
 }
 /***************** FONTS ********************/
 
 @import url("https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css");
 @import url("https://fonts.googleapis.com/css?family=Open+Sans:400,300");
 html {
-  font-size: 62.5%;
-  font-family: "Open Sans", sans-serif;
+	font-size: 62.5%;
+	font-family: "Open Sans", sans-serif;
 }
 body {
-  font-size: 1.6rem;
-  min-height: 100vh;
+	font-size: 1.6rem;
+	min-height: 100vh;
 }
 h1 {
-  font-size: 3rem;
-  margin-bottom: 1rem;
+	font-size: 3rem;
+	margin-bottom: 1rem;
 }
 h2 {
-  font-size: 1.6rem;
+	font-size: 1.6rem;
 }
 header {
-  position: sticky;
-  grid-area: header;
+	position: sticky;
+	grid-area: header;
 }
 main {
-  padding: 2rem;
-  position: sticky;
+	padding: 2rem;
+	position: sticky;
 }
 
 /************** NAVIGATION ***************/
 
 nav {
-  position: sticky;
+	position: sticky;
 }
 nav ul {
-  display: flex;
-  flex-wrap: wrap;
-  max-width: 1080px;
-  margin: 0 auto;
-  background: rgb(31, 31, 31);
-  list-style: none;
+	display: flex;
+	flex-wrap: wrap;
+	max-width: 1080px;
+	margin: 0 auto;
+	background: rgb(31, 31, 31);
+	list-style: none;
 }
 nav ul,
 nav li {
-  flex: 1;
+	flex: 1;
 }
 nav li:last-child {
-  border-bottom: none;
+	border-bottom: none;
 }
 nav a {
-  text-decoration: none;
-  color: inherit;
-  display: block;
-  font-size: 1.8rem;
+	text-decoration: none;
+	color: inherit;
+	display: block;
+	font-size: 1.8rem;
 }
 nav a:hover {
-  background: #474747;
-  color: #facd35;
+	background: #474747;
+	color: #facd35;
 }
 nav li {
-  line-height: 50px;
-  color: #facd35;
-  text-align: center;
+	line-height: 50px;
+	color: #facd35;
+	text-align: center;
 }
 .imglogo {
-  grid-area: imglogo;
-  width: 300%;
-  padding-top: 10%;
+	grid-area: imglogo;
+	width: 300%;
+	padding-top: 10%;
 }
 
 .imgbee {
-  grid-area: imgbee;
-  width: 100%;
+	grid-area: imgbee;
+	width: 100%;
 }
 .aboutus {
-  grid-area: aboutus;
-  font-family: "Open Sans", sans-serif;
+	grid-area: aboutus;
+	font-family: "Open Sans", sans-serif;
 }
 .imgbees {
-  grid-area: imgbees;
-  width: 100%;
+	grid-area: imgbees;
+	width: 100%;
 }
 .products {
-  grid-area: products;
+	grid-area: products;
 }
 .prodblurb {
-  grid-area: prodblurb;
-  padding-top: 10%;
-  font-family: "Open Sans", sans-serif;
+	grid-area: prodblurb;
+	padding-top: 10%;
+	font-family: "Open Sans", sans-serif;
 }
 .bush {
-  grid-area: bush;
-  width: 33%;
-  display: box;
+	grid-area: bush;
+	width: 33%;
 }
 .manuka {
-  grid-area: manuka;
-  width: 33%;
-  display: box;
+	grid-area: manuka;
+	width: 33%;
 }
 .rewarewa {
-  grid-area: rewarewa;
-  width: 33%;
-  display: box;
+	grid-area: rewarewa;
+	width: 33%;
 }
 .gallerycontainer {
-  display: grid;
-  grid-template-columns: 3;
-  grid-auto-rows: minmax(100px, auto);
-  grid-template-areas:
-    "fb ig yt"
-    ". . ."
-    "btt btt btt";
+	display: grid;
+	grid-template-columns: 3;
+	grid-auto-rows: minmax(100px, auto);
+	grid-template-areas:
+		"fb ig yt"
+		". . ."
+		"btt btt btt";
 }
 .ig1 {
-  grid-area: ig1;
-  width: 33%;
+	grid-area: ig1;
+	width: 33%;
 }
 .ig2 {
-  grid-area: ig2;
-  width: 33%;
+	grid-area: ig2;
+	width: 33%;
 }
 .ig3 {
-  grid-area: ig3;
-  width: 33%;
+	grid-area: ig3;
+	width: 33%;
 }
 .ig4 {
-  grid-area: ig4;
-  width: 33%;
+	grid-area: ig4;
+	width: 33%;
 }
 .ig5 {
-  grid-area: ig5;
-  width: 33%;
+	grid-area: ig5;
+	width: 33%;
 }
 .ig6 {
-  grid-area: ig6;
-  width: 33%;
+	grid-area: ig6;
+	width: 33%;
 }
 .ig7 {
-  grid-area: ig7;
-  width: 33%;
+	grid-area: ig7;
+	width: 33%;
 }
 .ig8 {
-  grid-area: ig8;
-  width: 33%;
+	grid-area: ig8;
+	width: 33%;
 }
 .ig9 {
-  grid-area: ig9;
-  width: 33%;
+	grid-area: ig9;
+	width: 33%;
 }
 .footer {
-  grid-area: ft;
+	grid-area: ft;
 }
 .fb {
-  grid-area: fb;
-  width: 40%;
-  margin-left: 30%;
+	grid-area: fb;
+	width: 40%;
+	margin-left: 30%;
 }
 .yt {
-  grid-area: yt;
-  width: 40%;
-  margin-left: 30%;
+	grid-area: yt;
+	width: 40%;
+	margin-left: 30%;
 }
 .ig {
-  grid-area: ig;
-  width: 40%;
-  margin-left: 30%;
+	grid-area: ig;
+	width: 40%;
+	margin-left: 30%;
 }
 .btt {
-  grid-area: btt;
-  margin-left: 45%;
+	grid-area: btt;
+	margin-left: 45%;
 }
 @media (max-width: 830px) {
-  .bush {
-    grid-area: bush;
-    width: 100%;
-    display: box;
-  }
-  .manuka {
-    grid-area: manuka;
-    width: 100%;
-    display: box;
-  }
-  .rewarewa {
-    grid-area: rewarewa;
-    width: 100%;
-    display: box;
-  }
-  .ig1 {
-    grid-area: ig1;
-    width: 100%;
-  }
-  .ig2 {
-    grid-area: ig2;
-    width: 100%;
-  }
-  .ig3 {
-    grid-area: ig3;
-    width: 100%;
-  }
-  .ig4 {
-    grid-area: ig4;
-    width: 100%;
-  }
-  .ig5 {
-    grid-area: ig5;
-    width: 100%;
-  }
-  .ig6 {
-    grid-area: ig6;
-    width: 100%;
-  }
-  .ig7 {
-    grid-area: ig7;
-    width: 100%;
-  }
-  .ig8 {
-    grid-area: ig8;
-    width: 100%;
-  }
-  .ig9 {
-    grid-area: ig9;
-    width: 100%;
-  }
+	.bush {
+		grid-area: bush;
+		width: 100%;
+	}
+	.manuka {
+		grid-area: manuka;
+		width: 100%;
+	}
+	.rewarewa {
+		grid-area: rewarewa;
+		width: 100%;
+	}
+	.ig1 {
+		grid-area: ig1;
+		width: 100%;
+	}
+	.ig2 {
+		grid-area: ig2;
+		width: 100%;
+	}
+	.ig3 {
+		grid-area: ig3;
+		width: 100%;
+	}
+	.ig4 {
+		grid-area: ig4;
+		width: 100%;
+	}
+	.ig5 {
+		grid-area: ig5;
+		width: 100%;
+	}
+	.ig6 {
+		grid-area: ig6;
+		width: 100%;
+	}
+	.ig7 {
+		grid-area: ig7;
+		width: 100%;
+	}
+	.ig8 {
+		grid-area: ig8;
+		width: 100%;
+	}
+	.ig9 {
+		grid-area: ig9;
+		width: 100%;
+	}
+}
+/* This is just to make the example nicer Email Validation */
+.formcontainer {
+	display: flex;
+	align-items: center;
+	align-content: center;
+	width: 30%;
+	margin: auto;
+
+	text-align: center;
+}
+body {
+	font: 1em sans-serif;
+	padding: 0;
+	margin: 0;
+}
+
+form {
+	max-width: 200px;
+	margin: auto;
+}
+
+button {
+	width: 30%;
+	margin: auto;
+}
+p * {
+	display: block;
+}
+
+input[type="email"] {
+	-webkit-appearance: none;
+
+	width: 100%;
+	border: 1px solid #333;
+	margin: 0;
+
+	font-family: inherit;
+	font-size: 90%;
+
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+/* This is our style for the invalid fields */
+input:invalid {
+	border-color: #900;
+	background-color: #fdd;
+}
+
+input:focus:invalid {
+	outline: none;
+}
+
+/* This is the style of our error messages */
+.error {
+	width: 100%;
+	padding: 0;
+
+	font-size: 80%;
+	color: white;
+	background-color: #900;
+	border-radius: 0 0 5px 5px;
+
+	-moz-box-sizing: border-box;
+	box-sizing: border-box;
+}
+
+.error.active {
+	padding: 0.3em;
 }
